--- a/Example/EasyEventPublisherExample/EasyEventPublisherExample.csproj
+++ b/Example/EasyEventPublisherExample/EasyEventPublisherExample.csproj
@@ -10,6 +10,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\EventPublisher\EasyEventPublisher.csproj" />
+		<ProjectReference Include="..\Domain\Domain.csproj" />
 	</ItemGroup>
 
 </Project>
