--- a/Example/Domain/Domain.csproj
+++ b/Example/Domain/Domain.csproj
@@ -7,11 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EasyEventPublisher" Version="1.0.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\..\EventPublisher\EasyEventPublisher.csproj" />
   </ItemGroup>
 
 </Project>
