--- a/EventPublisher/EasyEventPublisher.csproj
+++ b/EventPublisher/EasyEventPublisher.csproj
@@ -1,10 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-		<VersionPrefix>1.0.1</VersionPrefix>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<VersionPrefix>1.0.3</VersionPrefix>
 	</PropertyGroup>
 
 	<PropertyGroup>
